[Fix] dark mode

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -310,6 +310,7 @@ html {
 body {
     overflow-x: hidden;
     color: #3c484e;
+    background-color: #0d1219;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.5rem;
     line-height: 1.6em;
